*manual* locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8597 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -353,6 +353,7 @@ foxtrick.TeamStats.Pictures.label=Arcképek
 foxtrick.TeamStats.PlayedLatest.label=Játszott a legutóbbi mérkőzésen
 foxtrick.TeamStats.NotPlayedLatest.label=Nem játszott a legutóbbi mérkőzésen
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=A szezon áttekintése
@@ -441,16 +442,15 @@ foxtrick.transferfilter.Foxtrick_Filters=FoxTrick-szűrők
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=nap
-foxtrick.datetimestrings.day=nap
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=nap
 foxtrick.datetimestrings.hours=ó
 foxtrick.datetimestrings.minutes=p
 foxtrick.datetimestrings.short_seasons=sz
 foxtrick.datetimestrings.short_weeks=h
 foxtrick.datetimestrings.short_days=n
+
 #Transfer prices
 transfercompare_medianprice=Középár
 transfercompare_avgprice=Átlagár
@@ -803,7 +803,6 @@ MyMonitor.removeTeam=Jelöld ki az eltávolítani kívánt csapatot\:
 Copy=Másolás
 View=Megtekintés
 Switch_view=A nézet felcserélése
-Filter=Szűrő
 
 # fennec ui
 
@@ -914,4 +913,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=További hibamentesítő kimenetet jelení
 
 
 ###EOF
-
