--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -7,7 +7,7 @@ properties.translators=Izstrādātāji
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -117,6 +117,7 @@ foxtrick.TeamStats.PlayedLatest.label=Spēlēja pēdējā spēlē
 foxtrick.TeamStats.NotPlayedLatest.label=Nespēlēja pēdējā spēlē
 foxtrick.TeamStats.NotTransferListed.label=Nav izlikti pārdošanā
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Sezonas pārskats
@@ -164,13 +165,12 @@ Filters.specialty=Specialitāte
 Filters.stars=Zvaigznes
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=dienas
-foxtrick.datetimestrings.day=diena
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=dienas
 foxtrick.datetimestrings.hours=st.
 foxtrick.datetimestrings.minutes=min
+
 #Transfer prices
 transfercompare_avgprice=Vidējā cena
 
@@ -626,7 +626,6 @@ Switch_view=Mainīt skatu
 Detach=Atvienot
 AddHomegrown=Pievienot klubā uzaugušos spēlētājus
 showTimeInClub=Parādīt klubā pavadīto laiku
-Filter=Filtrs
 sort.up=Uz augšu
 sort.down=Uz leju
 action.clearCache=Iztīrīt kešatmiņu
@@ -711,4 +710,3 @@ foxtrick.prefs.AdditionalOptions=Galvenās opcijas
 
 
 ###EOF
-
