--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -281,6 +281,7 @@ foxtrick.TeamStats.Pictures.label=Stampi
 foxtrick.TeamStats.PlayedLatest.label=Lagħab fl-aħħar partita
 foxtrick.TeamStats.NotPlayedLatest.label=Ma lagħabx fl-aħħar partita
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=L-istaġun inġenerali
@@ -358,16 +359,15 @@ foxtrick.transferfilter.Foxtrick_Filters=Filtri ta' Foxtrick
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=ġranet
-foxtrick.datetimestrings.day=ġurnata
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=ġranet
 foxtrick.datetimestrings.hours=siegħa
 foxtrick.datetimestrings.minutes=minuta
 foxtrick.datetimestrings.short_seasons=st
 foxtrick.datetimestrings.short_weeks=ġi
 foxtrick.datetimestrings.short_days=ġr
+
 #Transfer prices
 transfercompare_medianprice=Prezz medjan
 transfercompare_avgprice=Prezz medju
@@ -734,4 +734,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Uri r-rapport addizzjonali debug fuq il-pa
 
 
 ###EOF
-
