--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -433,6 +433,7 @@ foxtrick.TeamStats.ActivePlayers.label=Actieve spelers
 foxtrick.TeamStats.HomeGrownPlayers.label=Eigen spelers
 foxtrick.TeamStats.PurchasedPlayers.label=Gekochte spelers
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Seizoensoverzicht
@@ -537,18 +538,18 @@ Filters.Form=Vorm
 Filters.XP=Ervaring
 Filters.specialty=Specialiteit
 Filters.stars=Sterren
+Filters.addFilterOptions=Filteropties toevoegen
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=dagen
-foxtrick.datetimestrings.day=dag
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=dagen
 foxtrick.datetimestrings.hours=u
 foxtrick.datetimestrings.minutes=m
 foxtrick.datetimestrings.short_seasons=s
 foxtrick.datetimestrings.short_weeks=wk
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Mediaangemiddelde prijs
 transfercompare_avgprice=Gemiddelde prijs
@@ -704,6 +705,8 @@ Last_stars_decline.abbr=Versch.
 Last_position=Laatste positie
 Last_position.abbr=Pos
 #following string uses pluralForms
+Last_match_played_as_at=Speelde %1 min als %2 in zijn meest recente wedstrijd op %3.; Speelde %1 minuten als %2 in zijn meest recente wedstrijd op %3.
+Last_match_didnot_play=Heeft nog geen wedstrijd gespeeld.
 
 Bruised=Pleister
 Bruised.abbr=Ple
@@ -1046,7 +1049,6 @@ Switch_view=Wissel weergave
 Detach=Koppel los
 AddHomegrown=Voeg eigen jeugdspelers toe
 showTimeInClub=Laat periode bij club zien
-Filter=Filter
 sort.up=Omhoog
 sort.down=Omlaag
 action.clearCache=Cache-geheugen leeghalen
@@ -1197,4 +1199,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Toon extra debug uitvoer op Hattrick pagin
 foxtrick.prefs.permissionsHint=%s vereist permissie om te werken. Sta toegang toe in het volgende venster.
 
 ###EOF
-
