--- a/content/locale/nn-NO/foxtrick.properties
+++ b/content/locale/nn-NO/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -331,6 +331,7 @@ foxtrick.TeamStats.Pictures.label=Andlete
 foxtrick.TeamStats.PlayedLatest.label=Spelt i førre kamp
 foxtrick.TeamStats.NotPlayedLatest.label=Spelte ikkje i førre kamp
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Sesongoversikt
@@ -418,16 +419,15 @@ foxtrick.transferfilter.Foxtrick_Filters=FoxTrick-filter
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=dagar
-foxtrick.datetimestrings.day=dag
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=dagar
 foxtrick.datetimestrings.hours=tim
 foxtrick.datetimestrings.minutes=min
 foxtrick.datetimestrings.short_seasons=s
 foxtrick.datetimestrings.short_weeks=ve
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Medianpris
 transfercompare_avgprice=Gjennomsnittleg pris
@@ -760,7 +760,6 @@ CrossTable.table=Sesongkrysstabell
 Copy=Kopier
 View=Syn
 Switch_view=Endre visning
-Filter=Filter
 
 # fennec ui
 
@@ -841,4 +840,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Vis ein eigen debuggar-informasjon på Hat
 
 
 ###EOF
-
