--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -323,6 +323,7 @@ foxtrick.TeamStats.ActivePlayers.label=Jogadores ativos
 foxtrick.TeamStats.HomeGrownPlayers.label=Jogadores recrutados pelo time
 foxtrick.TeamStats.PurchasedPlayers.label=Jogadores comprados
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Season overview
@@ -428,16 +429,15 @@ Filters.specialty=Especialidade
 Filters.stars=Estrelas
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=dias
-foxtrick.datetimestrings.day=dia
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=dias
 foxtrick.datetimestrings.hours=hs
 foxtrick.datetimestrings.minutes=min
 foxtrick.datetimestrings.short_seasons=t
 foxtrick.datetimestrings.short_weeks=s
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Média de Preço
 transfercompare_avgprice=Preço Médio
@@ -866,7 +866,6 @@ Switch_view=Alternar o modo de exibição
 Detach=Separar
 AddHomegrown=Adicionar jogadores da casa
 showTimeInClub=Mostrar hora no clube
-Filter=Filtro
 sort.up=Acima
 sort.down=Para baixo
 action.clearCache=Limpar cache
@@ -990,4 +989,3 @@ foxtrick.prefs.AdditionalOptions=Additional options
 
 
 ###EOF
-
