--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -433,6 +433,7 @@ foxtrick.TeamStats.ActivePlayers.label=Jucatori activi
 foxtrick.TeamStats.HomeGrownPlayers.label=Jucatori club mama
 foxtrick.TeamStats.PurchasedPlayers.label=Jucatori cumparati
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Date sezon
@@ -539,16 +540,15 @@ Filters.specialty=Specialitate
 Filters.stars=Stele
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=zile
-foxtrick.datetimestrings.day=zi
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=zile
 foxtrick.datetimestrings.hours=ore
 foxtrick.datetimestrings.minutes=min
 foxtrick.datetimestrings.short_seasons=sez
 foxtrick.datetimestrings.short_weeks=sapt
 foxtrick.datetimestrings.short_days=zil
+
 #Transfer prices
 transfercompare_medianprice=Pretul median
 transfercompare_avgprice=Pretul mediu
@@ -1046,7 +1046,6 @@ Switch_view=Schimba modul de vizualizare
 Detach=Detasare
 AddHomegrown=Adauga jucatorii crescuti la club
 showTimeInClub=Arata timpul de cand sunt la club
-Filter=Filtru
 sort.up=Up
 sort.down=Down
 action.clearCache=Curata cache-ul
@@ -1197,4 +1196,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Arata log-ul Foxtrick in josul paginii (pe
 foxtrick.prefs.permissionsHint=%s are nevoie de permisiunea de a lucra. Se permite accesul in urmatorul dialog.
 
 ###EOF
-
