--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -239,6 +239,7 @@ foxtrick.TeamStats.Pictures.label=Foto
 foxtrick.TeamStats.PlayedLatest.label=Luajtën ndeshjen e fundit
 foxtrick.TeamStats.NotPlayedLatest.label=Nuk luajtën ndeshjen e fundit
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Paraqitja e sezonit
@@ -315,16 +316,15 @@ foxtrick.transferfilter.Foxtrick_Filters=Filtrimet FoxTrick
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=ditë
-foxtrick.datetimestrings.day=ditë
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=ditë
 foxtrick.datetimestrings.hours=orë
 foxtrick.datetimestrings.minutes=min
 foxtrick.datetimestrings.short_seasons=s
 foxtrick.datetimestrings.short_weeks=jav
 foxtrick.datetimestrings.short_days=dit
+
 #Transfer prices
 transfercompare_medianprice=Çmimi median
 transfercompare_avgprice=Çmimi mesatar
@@ -595,4 +595,3 @@ foxtrick.prefs.AdditionalOptions=Opcionet të tjera
 
 
 ###EOF
-
