--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -200,6 +200,7 @@ foxtrick.TeamStats.Pictures.label=Фото
 foxtrick.TeamStats.PlayedLatest.label=Грали в останньому матчі
 foxtrick.TeamStats.NotPlayedLatest.label=Не грали в останньому матчі
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Статистика сезону
@@ -274,16 +275,15 @@ foxtrick.transferfilter.Foxtrick_Filters=Шаблони FoxTrick
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=днів
-foxtrick.datetimestrings.day=день
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=дні
 foxtrick.datetimestrings.hours=год.
 foxtrick.datetimestrings.minutes=хв.
 foxtrick.datetimestrings.short_seasons=сез.
 foxtrick.datetimestrings.short_weeks=тиж.
 foxtrick.datetimestrings.short_days=дн.
+
 #Transfer prices
 transfercompare_medianprice=Середня ціна
 transfercompare_avgprice=Середня ціна
@@ -547,4 +547,3 @@ foxtrick.prefs.AdditionalOptions=Додаткові параметри
 
 
 ###EOF
-
