--- a/content/locale/zh-CN/foxtrick.properties
+++ b/content/locale/zh-CN/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -390,6 +390,7 @@ foxtrick.TeamStats.Pictures.label=面貌
 foxtrick.TeamStats.PlayedLatest.label=在上一场比赛中出场
 foxtrick.TeamStats.NotPlayedLatest.label=未在上一场比赛中出场
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=赛季综述
@@ -481,16 +482,15 @@ foxtrick.transferfilter.Foxtrick_Filters=FoxTrick 过滤器
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=天
-foxtrick.datetimestrings.day=天
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=天
 foxtrick.datetimestrings.hours=小时
 foxtrick.datetimestrings.minutes=分
 foxtrick.datetimestrings.short_seasons=赛季
 foxtrick.datetimestrings.short_weeks=周
 foxtrick.datetimestrings.short_days=天
+
 #Transfer prices
 transfercompare_medianprice=价格中位数
 transfercompare_avgprice=价格平均数
@@ -916,7 +916,6 @@ Switch_view=切换视图
 Detach=分离
 AddHomegrown=添加青训产品球员
 showTimeInClub=显示在球队中的时间
-Filter=选择
 sort.up=移上
 sort.down=移下
 action.clearCache=清除缓存
@@ -1055,4 +1054,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=在页面底部显示 FoxTrick 日志 (用
 
 
 ###EOF
-
