--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -386,6 +386,7 @@ foxtrick.TeamStats.Pictures.label=الأوجه
 foxtrick.TeamStats.PlayedLatest.label=لعب في آخر مباراة
 foxtrick.TeamStats.NotPlayedLatest.label=لم يلعب آخر مباراة
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=لمحة الموسم العامة
@@ -477,16 +478,15 @@ foxtrick.transferfilter.Foxtrick_Filters=مصفيات FoxTrick
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=أيام
-foxtrick.datetimestrings.day=يوم
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=أيام
 foxtrick.datetimestrings.hours=ساعة
 foxtrick.datetimestrings.minutes=دقيقة
 foxtrick.datetimestrings.short_seasons=م
 foxtrick.datetimestrings.short_weeks=أ
 foxtrick.datetimestrings.short_days=ي
+
 #Transfer prices
 transfercompare_medianprice=وسط السعر
 transfercompare_avgprice=متوسط السعر
@@ -912,7 +912,6 @@ Switch_view=تغيير نمط العرض
 Detach=فصل
 AddHomegrown=إضافة اللاعبين الناشئين في الفريق
 showTimeInClub=إظهار الوقت في النادي
-Filter=مصفي
 sort.up=أعلى
 sort.down=أسفل
 action.clearCache=مسح الذاكرة المؤقتة
@@ -1049,4 +1048,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=إظهار سجل البرنامج في أ
 
 
 ###EOF
-
