--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -331,6 +331,7 @@ foxtrick.TeamStats.Pictures.label=Выявы
 foxtrick.TeamStats.PlayedLatest.label=Граў у апошнім матчы
 foxtrick.TeamStats.NotPlayedLatest.label=Ня граў у апошнім матчы
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Агляд сэзону
@@ -419,16 +420,15 @@ foxtrick.transferfilter.Foxtrick_Filters=Фільтры FoxTrick
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=дзён
-foxtrick.datetimestrings.day=дзень
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=дзён
 foxtrick.datetimestrings.hours=гг
 foxtrick.datetimestrings.minutes=хв
 foxtrick.datetimestrings.short_seasons=сэк
 foxtrick.datetimestrings.short_weeks=тдн
 foxtrick.datetimestrings.short_days=дз
+
 #Transfer prices
 transfercompare_medianprice=Медыянны кошт
 transfercompare_avgprice=Сярэдні кошт
@@ -763,7 +763,6 @@ CrossTable.table=Шахматная-табліца сэзону
 Copy=Капіяваць
 View=Від
 Switch_view=Зьмяніць выгляд
-Filter=Фільтар
 
 # fennec ui
 
@@ -847,4 +846,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Паказваць дадатковыя п
 
 
 ###EOF
-
