--- a/content/locale/el/foxtrick.properties
+++ b/content/locale/el/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -139,6 +139,7 @@ foxtrick.links.boxheader=Σύνδεσμοι
 #teamstats+filters
 foxtrick.TeamStats.label=Επισκόπηση ομάδας
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 
@@ -186,16 +187,15 @@ foxtrick.transferfilter.Foxtrick_Filters=Foxtrick Φίλτρα
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=μέρες
-foxtrick.datetimestrings.day=μέρα
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=μέρες
 foxtrick.datetimestrings.hours=Ω
 foxtrick.datetimestrings.minutes=λ
 foxtrick.datetimestrings.short_seasons=σ
 foxtrick.datetimestrings.short_weeks=εβ
 foxtrick.datetimestrings.short_days=μ
+
 #Transfer prices
 transfercompare_medianprice=Διάμεση τιμή
 transfercompare_avgprice=Μέση τιμή
@@ -459,4 +459,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Εμφάνιση αρχείο καταγρ
 foxtrick.prefs.permissionsHint=%s χρειάζεται άδεια πρόσβασης γα να εκτελείτε. Να επιτρέπεται η πρόσβαση;
 
 ###EOF
-
