--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -386,6 +386,7 @@ foxtrick.TeamStats.Pictures.label=Imágenes
 foxtrick.TeamStats.PlayedLatest.label=Jugaron el último partido
 foxtrick.TeamStats.NotPlayedLatest.label=No jugaron el último partido
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Resumen Temporada
@@ -477,16 +478,15 @@ foxtrick.transferfilter.Foxtrick_Filters=Filtros de Foxtrick
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=días
-foxtrick.datetimestrings.day=día
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=días
 foxtrick.datetimestrings.hours=hr
 foxtrick.datetimestrings.minutes=min
 foxtrick.datetimestrings.short_seasons=t
 foxtrick.datetimestrings.short_weeks=sm
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Mediana del precio
 transfercompare_avgprice=Precio promedio
@@ -908,7 +908,6 @@ Switch_view=Cambiar Vista
 Detach=Separar
 AddHomegrown=Añadir canterano
 showTimeInClub=Mostrar tiempo en el club
-Filter=Filtro
 sort.up=Arriba
 sort.down=Abajo
 action.clearCache=Borrar cache
@@ -1047,4 +1046,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Mostrar resultados de la depuración adici
 
 
 ###EOF
-
