--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -372,6 +372,7 @@ foxtrick.TeamStats.Pictures.label=چهره
 foxtrick.TeamStats.PlayedLatest.label=در بازي اخر بازي کرده
 foxtrick.TeamStats.NotPlayedLatest.label=در بازي اخر بازي نکرده
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=اطلاعات فصل
@@ -460,16 +461,15 @@ foxtrick.transferfilter.Foxtrick_Filters=فيلترهاي فاکس تريک
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=روزها
-foxtrick.datetimestrings.day=روز
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=روزها
 foxtrick.datetimestrings.hours=ساعت
 foxtrick.datetimestrings.minutes=دقيقه
 foxtrick.datetimestrings.short_seasons=فصل
 foxtrick.datetimestrings.short_weeks=هفته
 foxtrick.datetimestrings.short_days=روز
+
 #Transfer prices
 transfercompare_medianprice=قيمت وسط
 transfercompare_avgprice=ميانگين قيمت
@@ -938,7 +938,6 @@ Switch_view=عوض کردن نما
 Detach=جدا کردن
 AddHomegrown=افزودن بازیکنانی که از ابتدا در تیم شما پرورش یافته‌اند
 showTimeInClub=نمایش زمان در باشگاه
-Filter=فيلتر
 sort.up=بالا
 sort.down=پایین
 action.clearCache=خالی کردن حافظه کش
@@ -1069,4 +1068,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=نمايش متني براي مشاهده 
 
 
 ###EOF
-
