--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -407,6 +407,7 @@ foxtrick.TeamStats.ActivePlayers.label=Aktiiviset pelaajat
 foxtrick.TeamStats.HomeGrownPlayers.label=Joukkueen kasvattipelaajat
 foxtrick.TeamStats.PurchasedPlayers.label=Ostetut pelaajat
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Kauden yleiskatsaus
@@ -511,16 +512,15 @@ Filters.specialty=Erikoisuus
 Filters.stars=Tähdet
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=pv
-foxtrick.datetimestrings.day=pvä
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=pv
 foxtrick.datetimestrings.hours=h
 foxtrick.datetimestrings.minutes=min
 foxtrick.datetimestrings.short_seasons=v
 foxtrick.datetimestrings.short_weeks=vk
 foxtrick.datetimestrings.short_days=pv
+
 #Transfer prices
 transfercompare_medianprice=Mediaanihinta
 transfercompare_avgprice=Keskimääräinen hinta
@@ -1012,7 +1012,6 @@ Switch_view=Vaihda näkymää
 Detach=Irroita
 AddHomegrown=Lisää seuran omat kasvatit
 showTimeInClub=Näytä seurassa vietetty aika
-Filter=Suodatin
 sort.up=Ylös
 sort.down=Alas
 action.clearCache=Tyhjennä välimuisti
@@ -1153,4 +1152,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Näytä Foxtrick loki sivujen pohjalla (te
 
 
 ###EOF
-
