--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -296,6 +296,7 @@ foxtrick.TeamStats.Pictures.label=Photos
 foxtrick.TeamStats.PlayedLatest.label=A joué pendant le dernier match
 foxtrick.TeamStats.NotPlayedLatest.label=N'a pas joué pendant le dernier match
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Synthèse
@@ -373,16 +374,15 @@ foxtrick.transferfilter.Foxtrick_Filters=Filtres FoxTrick
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=jours
-foxtrick.datetimestrings.day=jour
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=jours
 foxtrick.datetimestrings.hours=h
 foxtrick.datetimestrings.minutes=m
 foxtrick.datetimestrings.short_seasons=S
 foxtrick.datetimestrings.short_weeks=s
 foxtrick.datetimestrings.short_days=j
+
 #Transfer prices
 transfercompare_medianprice=Prix médian
 transfercompare_avgprice=Prix moyen
@@ -759,4 +759,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Affiche des informations de débogage supp
 
 
 ###EOF
-
