--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -156,6 +156,7 @@ foxtrick.links.boxheader=Koppelings
 #teamstats+filters
 foxtrick.TeamStats.label=Ploechoersjoch
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 
@@ -203,16 +204,15 @@ foxtrick.transferfilter.Foxtrick_Filters=Foxtrick Filters
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=dagen
-foxtrick.datetimestrings.day=dei
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=dagen
 foxtrick.datetimestrings.hours=oe
 foxtrick.datetimestrings.minutes=m
 foxtrick.datetimestrings.short_seasons=s
 foxtrick.datetimestrings.short_weeks=w
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Mediaanpriis
 transfercompare_avgprice=Midsmjittige priis
@@ -461,4 +461,3 @@ disable_all_foxtrick_modules_ask=Wolst echt alle modules útskeakelje?\n
 
 
 ###EOF
-
