--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -202,6 +202,7 @@ foxtrick.TeamStats.Injured.label=Lesionados
 foxtrick.TeamStats.TransferListed.label=Na lista de traspasos
 foxtrick.TeamStats.Pictures.label=Imaxes
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 
@@ -270,16 +271,15 @@ Filters.specialty=Especialidade
 Filters.stars=Estrelas
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=días
-foxtrick.datetimestrings.day=día
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=días
 foxtrick.datetimestrings.hours=h
 foxtrick.datetimestrings.minutes=min
 foxtrick.datetimestrings.short_seasons=t
 foxtrick.datetimestrings.short_weeks=s
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Mediana do prezo
 transfercompare_avgprice=Precio medio
@@ -648,7 +648,6 @@ Switch_view=Trocar vista
 Detach=Separar
 AddHomegrown=Engadir a fidelidade dos xogadores
 showTimeInClub=Mostrar tempo no club
-Filter=Filtrar
 sort.up=Arriba
 sort.down=Abaixo
 action.clearCache=Limpiar caché
@@ -778,4 +777,3 @@ foxtrick.prefs.AdditionalOptions=Opcións xerais
 
 
 ###EOF
-
