--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -243,6 +243,7 @@ foxtrick.TeamStats.Pictures.label=Pictures
 foxtrick.TeamStats.PlayedLatest.label=Played in last match
 foxtrick.TeamStats.NotPlayedLatest.label=Did not play last match
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Season overview
@@ -319,16 +320,15 @@ foxtrick.transferfilter.Foxtrick_Filters=FoxTrick Filters
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=days
-foxtrick.datetimestrings.day=day
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=days
 foxtrick.datetimestrings.hours=hr
 foxtrick.datetimestrings.minutes=min
 foxtrick.datetimestrings.short_seasons=s
 foxtrick.datetimestrings.short_weeks=wk
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Median price
 transfercompare_avgprice=Average price
@@ -599,4 +599,3 @@ foxtrick.prefs.AdditionalOptions=Additional options
 
 
 ###EOF
-
