--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -312,6 +312,7 @@ foxtrick.TeamStats.NotPlayedLatest.label=Nije igrao u posljednjoj utakmici
 foxtrick.TeamStats.ActivePlayers.label=Aktivni igrači
 foxtrick.TeamStats.PurchasedPlayers.label=Kupljeni igrači
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Pregled sezone
@@ -405,16 +406,15 @@ Filters.specialty=Specijalnost
 Filters.stars=Zvjezdice
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=dana
-foxtrick.datetimestrings.day=dan
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=dana
 foxtrick.datetimestrings.hours=h
 foxtrick.datetimestrings.minutes=m
 foxtrick.datetimestrings.short_seasons=s
 foxtrick.datetimestrings.short_weeks=w
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Srednja vrijednost
 transfercompare_avgprice=Prosječna cijena
@@ -807,7 +807,6 @@ Switch_view=Promijeni pregled
 Detach=Odvoji
 AddHomegrown=Dodaj domaće igrače
 showTimeInClub=Prikaži vrijeme u klubu
-Filter=Filter
 sort.up=Gore
 sort.down=Dolje
 action.clearCache=Počisti predmemoriju
@@ -917,4 +916,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Prikazati dodatni 'debug izlaz' u podnožj
 
 
 ###EOF
-
