--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -375,6 +375,7 @@ foxtrick.TeamStats.Pictures.label=Andlit
 foxtrick.TeamStats.PlayedLatest.label=Spilaði í síðasta leik
 foxtrick.TeamStats.NotPlayedLatest.label=Spilaði ekki í síðasta leik
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Yfirlit tímabils
@@ -463,16 +464,15 @@ foxtrick.transferfilter.Foxtrick_Filters=FoxTrick Síur
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=dagar
-foxtrick.datetimestrings.day=dagur
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=dagar
 foxtrick.datetimestrings.hours=kl
 foxtrick.datetimestrings.minutes=mín
 foxtrick.datetimestrings.short_seasons=t
 foxtrick.datetimestrings.short_weeks=v
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Miðlægt verð
 transfercompare_avgprice=Meðalverð
@@ -863,7 +863,6 @@ ticker.type.others=Annað
 Copy=Afrita
 View=Skoða
 Switch_view=Breyta sýn
-Filter=Sía
 
 # fennec ui
 
@@ -981,4 +980,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Sýna FoxTrick skrá á botni á síðum (
 
 
 ###EOF
-
