--- a/content/locale/mk/foxtrick.properties
+++ b/content/locale/mk/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -232,6 +232,7 @@ foxtrick.TeamStats.Pictures.label=Слики
 foxtrick.TeamStats.PlayedLatest.label=Играл во последен натпревар
 foxtrick.TeamStats.NotPlayedLatest.label=Не играл во последен натпревар
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Преглед на сезона
@@ -307,16 +308,15 @@ foxtrick.transferfilter.Foxtrick_Filters=FoxTrick филтери
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=денови
-foxtrick.datetimestrings.day=ден
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=ден
 foxtrick.datetimestrings.hours=ч
 foxtrick.datetimestrings.minutes=мин
 foxtrick.datetimestrings.short_seasons=с
 foxtrick.datetimestrings.short_weeks=нед
 foxtrick.datetimestrings.short_days=д
+
 #Transfer prices
 transfercompare_medianprice=Медијана
 transfercompare_avgprice=Просечна цена
@@ -585,4 +585,3 @@ foxtrick.prefs.AdditionalOptions=Дополнителни опции
 
 
 ###EOF
-
