--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -7,7 +7,7 @@ properties.translators=Desenvolvedores
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -282,6 +282,7 @@ foxtrick.TeamStats.ActivePlayers.label=Jogadores ativos
 foxtrick.TeamStats.HomeGrownPlayers.label=Jogadores caseiros
 foxtrick.TeamStats.PurchasedPlayers.label=Jogadores comprados
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Visão geral da temporada
@@ -380,16 +381,15 @@ Filters.specialty=Especialidade
 Filters.stars=Estrelas
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=Dias
-foxtrick.datetimestrings.day=Dia
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=dias
 foxtrick.datetimestrings.hours=h.
 foxtrick.datetimestrings.minutes=min.
 foxtrick.datetimestrings.short_seasons=épo.
 foxtrick.datetimestrings.short_weeks=sem.
 foxtrick.datetimestrings.short_days=dias
+
 #Transfer prices
 transfercompare_medianprice=Preço mediano
 transfercompare_avgprice=Preço Médio
@@ -795,7 +795,6 @@ Switch_view=Alterar modo de exibição
 Detach=Desanexar
 AddHomegrown=Adicionar jogadores caseiros
 showTimeInClub=Mostrar Tempo no Clube
-Filter=Filtro
 sort.up=Para Cima
 sort.down=Para baixo
 action.clearCache=Limpar a 'Cache'
@@ -916,4 +915,3 @@ foxtrick.prefs.AdditionalOptions=Opções gerais
 
 
 ###EOF
-
