--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -284,6 +284,7 @@ foxtrick.TeamStats.Pictures.label=Obrázky
 foxtrick.TeamStats.PlayedLatest.label=Hrali v poslednom zápase
 foxtrick.TeamStats.NotPlayedLatest.label=Nehrali v poslednom zápase
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Season overview
@@ -361,16 +362,15 @@ foxtrick.transferfilter.Foxtrick_Filters=Foxtrick filtre
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=dní
-foxtrick.datetimestrings.day=deň
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=dni
 foxtrick.datetimestrings.hours=h
 foxtrick.datetimestrings.minutes=m
 foxtrick.datetimestrings.short_seasons=s
 foxtrick.datetimestrings.short_weeks=t
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Medián ceny
 transfercompare_avgprice=Priemerná cena
@@ -743,4 +743,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Zobraziť dodatočné ladiace výstupy v p
 
 
 ###EOF
-
