--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -156,6 +156,7 @@ foxtrick.TeamStats.TransferListed.label=Na trgu prestopov
 foxtrick.TeamStats.Pictures.label=Obrazi
 foxtrick.TeamStats.PurchasedPlayers.label=Kupljenih igralcev
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Pregled sezone
@@ -235,15 +236,14 @@ Filters.specialty=Posebnost
 Filters.stars=Zvezdice
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 foxtrick.datetimestrings.days=dni
-foxtrick.datetimestrings.day=dan
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=dni
 foxtrick.datetimestrings.hours=h
 foxtrick.datetimestrings.minutes=min
 foxtrick.datetimestrings.short_seasons=s
 foxtrick.datetimestrings.short_days=d
+
 #Transfer prices
 transfercompare_medianprice=Srednja cena
 transfercompare_avgprice=Povprečna cena
@@ -625,7 +625,6 @@ View=Pogled
 Switch_view=Preklopi pogled
 Detach=Odpni
 showTimeInClub=Pokaži čas v klubu
-Filter=Filter
 sort.up=Gor
 sort.down=Dol
 action.clearCache=Počisti predpomnilnik
@@ -710,4 +709,3 @@ prefs.view.by.category=Pogled po kategorijah
 
 
 ###EOF
-
