--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -6,7 +6,7 @@
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -51,6 +51,7 @@ pluralFormRuleID=pluralFormRule0
 
 #teamstats+filters
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 
@@ -78,8 +79,9 @@ pluralFormRuleID=pluralFormRule0
 #Filter
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+
 #Transfer prices
 
 
@@ -194,7 +196,6 @@ ticker.type.challenge=Kapışma
 # Links
 
 #actions
-Filter=Filtre
 sort.up=Yukarı
 sort.down=Aşağı
 
@@ -233,4 +234,3 @@ pageAction.all=Tümünü göster
 
 
 ###EOF
-
