Russian translation update to r8597
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8598 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,6 +1,6 @@
 #used by translators to keep track. not used with foxtrick atm
 properties.language=ru-RU
-properties.version=r8504
+properties.version=r8597
 properties.translators=_KOHb_ [teamId=28914]
 
 # Hints:
@@ -8,7 +8,7 @@ properties.translators=_KOHb_ [teamId=28914]
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
-# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Text with %-sign eg %s will be automatically replaced by the appropriate text.
 # Eg in "The price is %s." %s will be replaced by the selected amount of money.
 # Thus, you need to include those %s entries into your text accordingly
 
@@ -291,7 +291,7 @@ foxtrick.TeamPopupLinks.NextMatch.desc=Следующий матч
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Добавить матч в HT Live
 foxtrick.TeamPopupLinks.YouthMatches.desc=Матчи юн.академии
 foxtrick.TeamPopupLinks.Coach.desc=Тренер
-foxtrick.TeamPopupLinks.CustomLink.desc=Собственые ссылки. Теги [userid] и [teamid] будут замещены соответствующими идентификаторами.
+foxtrick.TeamPopupLinks.CustomLink.desc=Собственые ссылки. Теги [UserID] и [TeamID] будут замещены соответствующими идентификаторами.
 foxtrick.SkillColoring.desc=Улучшение визуального представления навыков
 foxtrick.SkillColoring.skill_color.desc=Подсветка уровней навыков
 foxtrick.SkillColoring.only_skill_color.desc=Подсвечивать только навыки, не трогать настроение болельщиков, темперамент и т.п.
@@ -435,6 +435,7 @@ foxtrick.TeamStats.ActivePlayers.label=Действующие игроки
 foxtrick.TeamStats.HomeGrownPlayers.label=Доморощенные игроки
 foxtrick.TeamStats.PurchasedPlayers.label=Купленные игроки
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Статистика сезона
@@ -539,18 +540,18 @@ Filters.Form=Форма
 Filters.XP=Опыт
 Filters.specialty=Специализация
 Filters.stars=Звёзды
+Filters.addFilterOptions=Добавить фильтры
 
 #Locales for date and time
-#Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
-foxtrick.datetimestrings.days=дней
-foxtrick.datetimestrings.day=день
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=дня
-foxtrick.datetimestrings.hours=ч.
-foxtrick.datetimestrings.minutes=мин.
-foxtrick.datetimestrings.short_seasons=с
-foxtrick.datetimestrings.short_weeks=нед.
-foxtrick.datetimestrings.short_days=дн.
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+foxtrick.datetimestrings.days=день;дня;дней
+foxtrick.datetimestrings.hours=ч;ч;ч
+foxtrick.datetimestrings.minutes=мин;мин;мин
+foxtrick.datetimestrings.short_seasons=сез;сез;сез
+foxtrick.datetimestrings.short_weeks=нед;нед;нед
+foxtrick.datetimestrings.short_days=д;д;д
+
 #Transfer prices
 transfercompare_medianprice=Среднерыночная цена
 transfercompare_avgprice=Средняя цена
@@ -706,7 +707,8 @@ Last_stars_decline.abbr=Разн
 Last_position=Последняя позиция
 Last_position.abbr=Поз
 #following string uses pluralForms
-Last_match_played_as=В своём последнем матче сыграл %1 минуту на позиции %2.;В своём последнем матче сыграл %1 минуты на позиции %2.;В своём последнем матче сыграл %1 минут на позиции %2.
+Last_match_played_as_at=Последний раз (%3) сыграл %1 минуту на позиции %2.;Последний раз (%3) сыграл %1 минуты на позиции %2.;Последний раз (%3) сыграл %1 минут на позиции %2.
+Last_match_didnot_play=Has not played yet.
 
 Bruised=Повреждён
 Bruised.abbr=Пвр
@@ -1049,7 +1051,6 @@ Switch_view=Переключить вид
 Detach=Открепить
 AddHomegrown=Добавить доморощенных игроков
 showTimeInClub=Показывать время, проведённое в клубе
-Filter=Фильтр
 sort.up=По убыванию
 sort.down=По возрастанию
 action.clearCache=Очистить кэш
@@ -1088,7 +1089,7 @@ status.unknown=Неизвестно
 status.unknown.abbr=?
 
 oauth.authorize=Авторизовать FoxTrick для доступа к данным Вашей команды
-oauth.instructions=Вскоре появится сыллка на страницу chpp.hattrick.org.\nОткройте ссылку и введите свои имя и пароль к Hattrick'у для получения кода потверждения. Скопируйте полученный код в поле ниже для авторизации FoxTrick для получения данных Вашей команды.\nFoxTrick не будет знать Вашего пароля в течение всего процесса.
+oauth.instructions=Вскоре появится сыллка на страницу chpp.hattrick.org. Откройте ссылку и введите свои имя и пароль к Hattrick'у для получения кода потверждения. Скопируйте полученный код в поле ниже для авторизации FoxTrick для получения данных Вашей команды. FoxTrick не будет знать Вашего пароля в течение всего процесса.
 oauth.why=Зачем авторизовывать FoxTrick?
 oauth.link=Получить код подтверждения с сайта chpp.hattrick.org
 oauth.success=FoxTrick был успешно авторизован! Пожалуйста, перезагрузите эту страницу для отображения дополнительной информации, предоставляемой FoxTrick.
@@ -1200,4 +1201,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Показывать протокол ра
 foxtrick.prefs.permissionsHint=Модулю %s нужно разрешение для работы. Дайте ему доступ в следующем диалоге.
 
 ###EOF
-
