--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -660,8 +660,8 @@ Stamina.abbr=Kon
 Form=Form
 Form.abbr=Fo
 
-Loyality=Treue
-Loyality.abbr=Tr
+Loyalty=Treue
+Loyalty.abbr=Tr
 MotherClubBonus=Heimatvereinbonus
 MotherClubBonus.abbr=HB
 
