--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -673,8 +673,8 @@ Stamina.abbr=Res
 Form=Forma
 Form.abbr=For
 
-Loyality=Fedeltà
-Loyality.abbr=Fe
+Loyalty=Fedeltà
+Loyalty.abbr=Fe
 MotherClubBonus.abbr=BO
 
 Status=Stato
