--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -127,7 +127,7 @@ foxtrick.LinksAchievements.desc=업적 페이지에 몇 개의 외부 링크 추
 foxtrick.LinksStaff.desc=직원 페이지에 몇 개의 외부 링크 추가
 foxtrick.LinksTracker.desc=국가 대표 팀과 대표 팀 선수 페이지에 몇 개의 외부 링크 추가
 foxtrick.LinksClubTransfers.desc=클럽 이적 페이지에 몇 개의 외부 링크 추가
-foxtrick.LoyalityDisplay.desc=선수 페이지에 충성도와 모 클럽 보너스 효과 강조 (HT 환경설정에서 'Show skill bars' 옵션이 활성화되어 있을 때만 동작합니다)
+foxtrick.LoyaltyDisplay.desc=선수 페이지에 충성도와 모 클럽 보너스 효과 강조 (HT 환경설정에서 'Show skill bars' 옵션이 활성화되어 있을 때만 동작합니다)
 foxtrick.ForumAlterHeaderLine.desc=포스팅 머리글 라인 변경
 foxtrick.Singleline2.desc=대체 토론장 머리글 싱글 라인 모듈. 다른 버전보다 약간 더 빠릅니다. 모듈을 변경하는 몇 가지 충돌을 일으키는 토론장 포스트를 비활성화합니다.
 # please translate next lines again if needed
@@ -680,8 +680,8 @@ Stamina.abbr=체력
 Form=Form
 Form.abbr=Fo
 
-Loyality=충성도
-Loyality.abbr=충성
+Loyalty=충성도
+Loyalty.abbr=충성
 MotherClubBonus=모 클럽 보너스
 MotherClubBonus.abbr=모클
 
