--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -289,8 +289,8 @@ Stamina.abbr=Izt
 Form=Forma
 Form.abbr=Forma
 
-Loyality=Lojalitāte
-Loyality.abbr=Loj
+Loyalty=Lojalitāte
+Loyalty.abbr=Loj
 MotherClubBonus=Māteskluba bonuss
 MotherClubBonus.abbr=MB
 
