--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -533,7 +533,7 @@ Stamina.abbr=Resist
 Form=Forma
 Form.abbr=Fo
 
-Loyality=Lealdade
+Loyalty=Lealdade
 MotherClubBonus=Bônus de clube de origem
 
 Status=Status
