--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -125,7 +125,7 @@ foxtrick.LinksAchievements.desc=Adauga legaturi externe la pagina cu realizari
 foxtrick.LinksStaff.desc=Adauga legaturi externe la pagina staffului
 foxtrick.LinksTracker.desc=Adauga legaturi externe pentru urmarirea jucatorilor la paginile NT si paginile jucatorilor
 foxtrick.LinksClubTransfers.desc=Adauga legaturi externe catre istoria transferurilor
-foxtrick.LoyalityDisplay.desc=Evidentiaza efectul loialitatii si bonusul clubului mama pe pagina personala a jucatorului (functioneaza doar cu optiunea 'Afiseaza calitati bare' activita in preferinte HT)
+foxtrick.LoyaltyDisplay.desc=Evidentiaza efectul loialitatii si bonusul clubului mama pe pagina personala a jucatorului (functioneaza doar cu optiunea 'Afiseaza calitati bare' activita in preferinte HT)
 foxtrick.ForumAlterHeaderLine.desc=Modifica linia de antet a postului
 foxtrick.Singleline2.desc=Alternativa pentru antent intr-o singura linie. Un pic mai rapid decat celelalte versiuni. Dsipart anumite conflicte care apar in momentul postarii pe forum.
 # please translate next lines again if needed
@@ -677,8 +677,8 @@ Stamina.abbr=Rez
 Form=Forma
 Form.abbr=Fo
 
-Loyality=Loialitate
-Loyality.abbr=Lo
+Loyalty=Loialitate
+Loyalty.abbr=Lo
 MotherClubBonus=Bonus club mama
 MotherClubBonus.abbr=CM
 
