--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -579,8 +579,8 @@ Stamina.abbr=Stm
 Form=فرم
 Form.abbr=Fo
 
-Loyality=وفاداری
-Loyality.abbr=وفاداری
+Loyalty=وفاداری
+Loyalty.abbr=وفاداری
 MotherClubBonus=سهم باشگاه مادر
 MotherClubBonus.abbr=سهم باشگاه مادر
 
