--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -114,7 +114,7 @@ foxtrick.LinksAchievements.desc=Lisää joitain ulkoisia linkkejä saavutuksiin
 foxtrick.LinksStaff.desc=Lisää joitain ulkoisia linkkejä henkilökuntasivulle
 foxtrick.LinksTracker.desc=Lisää joitain ulkoisia seuranta linkkejä vastaavien NT sivujen ja pelaajien sivulle
 foxtrick.LinksClubTransfers.desc=Lisää joitain ulkoisia linkkejä seuran siirtosivulle
-foxtrick.LoyalityDisplay.desc=Korosta uskollisuuden ja kasvattajaseurabonuksen vaikutus pelaajan tietosivulla (Toimii vain, jos 'Näytä taidot palkkeina' on valittuna HT\:n asetuksissa)
+foxtrick.LoyaltyDisplay.desc=Korosta uskollisuuden ja kasvattajaseurabonuksen vaikutus pelaajan tietosivulla (Toimii vain, jos 'Näytä taidot palkkeina' on valittuna HT\:n asetuksissa)
 foxtrick.ForumAlterHeaderLine.desc=Muuttaa viestiotsakkeiden linjausta (SingleHeaderLine muuttaa viestiotsakkeet yhteen riviin)
 foxtrick.Singleline2.desc=Vaihteleva yhden linjan ForumHeader moduuli. Lievästi nopeampi kuin muut versiot. Estää joitain ristiriitoja - foorumi viesti vaihtaa moduuleja.
 # please translate next lines again if needed
@@ -646,8 +646,8 @@ Stamina.abbr=Kes
 Form=Kunto
 Form.abbr=Kun
 
-Loyality=Uskollisuus
-Loyality.abbr=Us
+Loyalty=Uskollisuus
+Loyalty.abbr=Us
 MotherClubBonus=Kasvattajaseuran lisä
 MotherClubBonus.abbr=KL
 
