--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -504,8 +504,8 @@ Stamina.abbr=Izd
 Form=Forma
 Form.abbr=For
 
-Loyality=Odanost
-Loyality.abbr=Od
+Loyalty=Odanost
+Loyalty.abbr=Od
 MotherClubBonus=Bonus matičnoga kluba
 
 Status=Status
