--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -126,7 +126,7 @@ foxtrick.LinksAchievements.desc=Prideda išorinių nuorodų pasiekimų puslapyje
 foxtrick.LinksStaff.desc=Prideda išorinių nuorodų savanorių puslapyje
 foxtrick.LinksTracker.desc=Prideda nuorodų į išorinius šalių statistikos puslapius atitinkamų rinktinių ir jų žaidėjų puslapiuose
 foxtrick.LinksClubTransfers.desc=Prideda išorinių nuorodų sandorių puslapyje
-foxtrick.LoyalityDisplay.desc=Pavaizduoti lojalumo ir kilmės klubo premijos poveikius Jūsų žaidėjų puslapiuose (tik įjungus įgūdžių stulpelius HT nustatymuose)
+foxtrick.LoyaltyDisplay.desc=Pavaizduoti lojalumo ir kilmės klubo premijos poveikius Jūsų žaidėjų puslapiuose (tik įjungus įgūdžių stulpelius HT nustatymuose)
 foxtrick.ForumAlterHeaderLine.desc=Pakeičia žinutės antraštę
 foxtrick.Singleline2.desc=Alternatyvus mažų forumo antraščių modulis. Veikia šiek tiek greičiau. Išjungia keletą kitų konfliktuojančių forumo modulių.
 # please translate next lines again if needed
@@ -678,8 +678,8 @@ Stamina.abbr=Išt
 Form=Forma
 Form.abbr=Fo
 
-Loyality=Lojalumas
-Loyality.abbr=Lo
+Loyalty=Lojalumas
+Loyalty.abbr=Lo
 MotherClubBonus=Kilmės klubo premija
 MotherClubBonus.abbr=KK
 
