Serbian Translation update (typos)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8607 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1008,7 +1008,7 @@ MyMonitor.header=Мој монитор
 #following string uses pluralForms
 MyMonitor.teams=%s тим којег пратите;%s тима која пратите;%s тимова које пратите
 MyMonitor.add=Убаци у монитор
-MyMonitor.remove=Уклоните овај тим иѕ монитора
+MyMonitor.remove=Уклоните овај тим из монитора
 MyMonitor.addHelp=Прво идите на страницу тима којег желите да пратите. У менију са десне стране ћете наћи линк за убацивање у монитор.
 MyMonitor.removeTeam=Изаберите тим који желите да уклоните са листе за праћење:
 # %n, %t and %i will be replaced by team name, type and ID respectively
