Serbian Translation update (typos)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8612 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1054,7 +1054,7 @@ showTimeInClub=Прикажи време проведено у клубу
 sort.up=Растуће
 sort.down=Опадајуће
 action.clearCache=Обриши кеш
-action.clearCache.title=Брише Фокsтрикову Xml кеш меморију. Фокстрик скида додатне информације са Хеттрик сервера на ваш захтев. Све док не затворите ваш интернет пргледник, Фокстрик ће користити податке који су локално сачувани. У ретким случајевима ови подаци могу бити застарели. Обришите Фокстрикову кеш меморију да скинете те додатне информације поново.
+action.clearCache.title=Брише Фокстрикову Xml кеш меморију. Фокстрик скида додатне информације са Хеттрик сервера на ваш захтев. Све док не затворите ваш интернет пргледник, Фокстрик ће користити податке који су локално сачувани. У ретким случајевима ови подаци могу бити застарели. Обришите Фокстрикову кеш меморију да скинете те додатне информације поново.
 featureHighlight.title=Кликни да означиш већину Фокстрик додатака на овој страници
 
 # fennec ui
